# server-core

./: CHANGELOG.md  GUIA_DESARROLLO_BOXOPS.md  MANUAL_CLI.md  README.md  install.sh  pyproject.toml  server-core.mmd
boxops/: main.py
boxops/catalog/backups/pg-backup/: docker-compose.yml
boxops/catalog/cache/redis/: docker-compose.yml
boxops/catalog/database/postgres/: docker-compose.yml
boxops/catalog/observability/prom-grafana/: docker-compose.yml
boxops/catalog/proxy/traefik-basic/: docker-compose.yml
boxops/catalog/storage/minio/: docker-compose.yml
boxops/modules/: __init__.py  app_module.py  daemon_module.py  db_module.py  infra_module.py  init_module.py  remote_module.py
boxops/utils/: telegram.py  telegram_daemon.py
demo/: .env.example  .gitignore  ssh_procedure.md
docs/: architecture.md
