[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boxops"
version = "1.0.0"
description = "DevOps Server Provisioning & Management CLI"
authors = [{name = "BoxOps Admin"}]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "pyyaml>=6.0.1"
]

[project.scripts]
boxops = "boxops.main:app"

[tool.setuptools]
packages = ["boxops"]
